--- a/index.html
+++ b/index.html
@@ -22,23 +22,10 @@
 
 <div id="open-menu" class="overlay">
 <div class="modal card">
-<header class="cardHeader padLR font-14 flex-center-v txtShadowD3">Menu</header>
+<header class="cardHeader padLR font-14 flex-center-all txtShadowD3">Menu</header>
 <div class="cardBody padLR">
 <nav>
-<ol>
-<li><a href="index.html">Home</a></li>
-<li><a>Link</a></li>
-<li><b class="font-12">Heading</b>
-<ol>
-<li><a>Link</a></li>
-<li><a>Link</a></li>
-<li><b class="font-12">Heading</b>
-<ol>
-<li><a>Link</a></li>
-</ol></li>
-</ol></li>
-<li><a>Link</a></li>
-</ol>
+<div include-html="menu.html"></div>
 </nav>
 </div>
 <div class="cardFooter flex-center-all"><a href="#!" title="Close" class="button bgcolGray1">Close</a></div>
@@ -49,6 +36,7 @@
 
 <div class="padLR">
   <h1>Port Macquarie Urban Food Garden</h1>
+  <div class="box-tag bgcol-T25 color-T80">Last Updated: 2023-08-09</div>
   <p>We have been growing food with a sustainability goal since 1994. We initially started in Gympie on 40 acres. We turned 40 acres of Blady grass into a showcase of sustainability. We won the first Gympie Landcare Environment Award. After 5 years we had to move to a coastal urban environment (due to allergies to grass pollen) and continue our sustainability focus in an urban environment.</p>
 
 <p></p>What is an Urban Food Garden? We were looking for a description of what we do and decided Urban Food Garden best describes it.
@@ -62,7 +50,9 @@
 <p>When the last tree has been cut down, the last fish caught, the last river poisoned, only then will we realize that one cannot eat money.</p>
 </div>
 
-<div class="card flex-center-all pad-4"><img src="youtubelogo.svg" height="50" alt="Youtube Image"> <a href="https://youtube.com/@pmufg" target="_blank" class="txtShadowBlackGlow font-14">Check out our videos on YouTube.</a></div>
+<div class="card flex-center-all pad-4"><img src="youtubelogo.svg" height="50" alt="Youtube Image"> <a href="https://youtube.com/@pmufg" target="_blank" class="txtShadowBlackGlow font-14">Virtual Tour and Information</a></div>
 
 </div>
+</div>
+<script>includeHTML();</script>
 </body></html>
