--- a/avocado-root-rot.html
+++ b/avocado-root-rot.html
@@ -16,29 +16,27 @@
 <div id="pageBox">
 
 <div id="brandmenu">
-  <div id="brand" class="nowrap"><span class="nowrap brandfont4">port-macquarie-urban-food-garden.srvr.au</span></div>
+<div id="brand" class="nowrap"><span class="nowrap brandfont4">port-macquarie-urban-food-garden.srvr.au</span></div>
 <div id="menubar"><a class="button" href="#open-menu">&#9776 Menu</a></div>
 </div>
 
 <div id="open-menu" class="overlay">
 <div class="modal card">
 <header class="cardHeader padLR font-14 flex-center-all txtShadowD3">Menu</header>
-<div class="cardBody padLR">
-<nav>
+<div class="cardBody padLR"><nav>
 <div include-html="menu.html"></div>
-</nav>
-</div>
+</nav></div>
 <div class="cardFooter flex-center-all"><a href="#!" title="Close" class="button bgcolGray1">Close</a></div>
-    </div>
-</div>
+</div></div>
 
 <div class="padLR">
   <h1>Experiment to stop avocado root rot</h1>
   <div class="box-tag bgcol-T25 color-T80">Last Updated: 2023-08-09</div>
   <p>Coming soon...</p>
-
-
+  
 </div>
+
+<iframe class="video" src="https://www.youtube.com/embed/OiF4O2INexg" frameborder="0"></iframe>
 </div>
 <script>includeHTML();</script>
 </body></html>
