--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
 <li><a href="why-grow-food.html">Why Grow Food</a></li>
 <li><a href="compost.html">Compost & other Inputs</a></li>
 <li><a href="avocado-root-rot.html">Experiment to stop avocado root rot</a></li>
+<li><a href="contactus.html">Contact Us</a></li>
+</ol>
 
 
 <!--
@@ -18,4 +20,3 @@
 </ol></li>
 <li><a>Link</a></li>
 -->
-</ol>
