--- a/contactus.html
+++ b/contactus.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en-au"><head><meta charset="utf-8"><meta name="robots" content="index,follow,noarchive">
+<!doctype html><html lang="en-au"><head><meta charset="utf-8"><meta name="robots" content="noindex,nofollow,noarchive">
 <title>Contact Us</title>
 <meta name="description" content="">
 
