--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <img src="header.jpg" alt="Heading Image">
 
 <div class="padLR">
+  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-09</div>
   <h1>Port Macquarie Urban Food Garden</h1>
-  <div class="box-tag bgcol-T25 color-T80">Last Updated: 2023-08-09</div>
   <p>We have been growing food with a sustainability goal since 1994. We initially started in Gympie on 40 acres. We turned 40 acres of Blady grass into a showcase of sustainability. We won the first Gympie Landcare Environment Award. After 5 years we had to move to a coastal urban environment (due to allergies to grass pollen) and continue our sustainability focus in an urban environment.</p>
 
 <p></p>What is an Urban Food Garden? We were looking for a description of what we do and decided Urban Food Garden best describes it.
