--- a/avocado-root-rot.html
+++ b/avocado-root-rot.html
@@ -30,8 +30,8 @@
 </div></div>
 
 <div class="padLR">
+  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-09</div>
   <h1>Experiment to stop avocado root rot</h1>
-  <div class="box-tag bgcol-T25 color-T80">Last Updated: 2023-08-09</div>
   <p>Coming soon...</p>
   
 </div>
