--- a/why-grow-food.html
+++ b/why-grow-food.html
@@ -33,8 +33,8 @@
 </div>
 
 <div class="padLR">
+  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-09</div>
   <h1>Why Grow Food?</h1>
-  <div class="box-tag bgcol-T25 color-T80">Last Updated: 2023-08-09</div>
   <p>Coming soon...</p>
 
 </div>
