--- a/why-grow-food.html
+++ b/why-grow-food.html
@@ -33,9 +33,24 @@
 </div>
 
 <div class="padLR">
-  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-09</div>
+  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-19</div>
   <h1>Why Grow Food?</h1>
-  <p>Coming soon...</p>
+  <p>The foremost reason we have for growing food is that <b>home grown food tastes better</b> and I mean a lot better. Whenever we buy vegies from the supermarket we are amazed at the watery and insipid taste of them. These purchases are usually impulse purchases of specials. After eating them we decide they are just not worth buying, even on special.</p>
+  <p>Another reason is <b>intellectual stimulation</b>. It's actually quite difficult to grow a wide range of vegies, successfully. Many farmers grow one or two plants and it's easy to figure out what to do to grow them successfully. Like juggling, it's easy with 2 balls, but try juggling 20. Intellectually it's quite a challenge to figure out how to grow all your food requirements.</p>
+  <p><b>It's fun.</b> I don't think there is anything quite so satisfying as when your plants finally break the surface. It's what you put into it that determines what you get out. On our 40 acres we grew a small patch of sorghum. Here's what we put into it:
+  <ul>
+    <li>Bought a heavy horse (half draft).</li>
+    <li>Seached local area for collar, hames and plough in OK condition.</li>
+    <li>Bought harness from Amish in USA.</li>
+    <li>Constructed harrows from hardwood and bolts.</li>
+    <li>Studied USA books and magazines to learn how to plough.</li>
+    <li>Taught horse how to plough.</li>
+    <li>Ploughed, seeded and harrowed,</li>
+  </ul>
+  When our field of sorghum breached we were stoked!</p>
+  
+  <p><b>Independence</b>. When covid struck and everybody rushed out to buy toilet paper. We were buying seeds. People finally figured out food was more important, and bought up all the seed. Although supermarkets have a lot of food, you are at the mercy of demand and the supply chain. At the end of the day the rich will buy all, and the poor get nothing. That's capitalism folks!</p>
+  
 
 </div>
 </div>
