--- a/compost.html
+++ b/compost.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang="en-au"><head><meta charset="utf-8"><meta name="robots" content="index,follow,noarchive">
-<title>Compost and other inputs</title>
+<title>Increase Fertility</title>
 <meta name="description" content="">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,9 +33,21 @@
 </div>
 
 <div class="padLR">
-  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-09</div>
-  <h1>Compost & other inputs</h1>
-  <p>Coming soon...</p>
+  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-29</div>
+  <h1>Increase Fertility</h1>
+  <h3>Robbing Peter to pay Paul</h3>
+  <p>When you are growing food you need to increase the fertility of the growing area. This means taking inputs from outside the growing area to use inside the growing area. The growing area could be a garden/farm space or it could simply be the dripline around a tree (or a whole orchard).</p>
+  <p>When we had 40 acres, we had a growing area of 1/4 acre and two paddocks for 3 horses of 20 and 10 acres. The land was clapped out. The growing area was an old landslip from down the hill about 10 feet above the flood plain. It had a good depth of soil but it was infertile like the rest. Every few days we would collect a trailor load of horse manure from the paddocks, compost it and add it to the garden. We started at one corner of the 1/4 acre and over the years gradually expanded the growing area. It was a very slow process of enriching the fertility of the soil foot by foot. The crops we did grow were amazing ie. 10 foot corn and strawberry plants 10 inches high.</p>
+  <p>In our urban garden we have to buy in all our inputs. Instead of gathering the manure (fertility) from a large part of our land to enrich a small part. We have to buy in everything from outside our house block.</p>
+  
+  <h3>Artificial Fertilizer</h3>
+  <p>Artificials have their place. However just using artificials is a big mistake. It is just-in-time (JIT) agriculture. Whatever you put into your growing space is completely used by the crops and nothing is left. If you can't get your artificials then your crops don't happen. In my opinion artificials can be very beneficial when growing tree crops with the proviso that all waste from the trees is returned to the trees. Artificials are not beneficial for cropping spaces because most of the plant is removed (eaten). For cropping spaces compost is the best thing to use to enrich the growing space.</p>
+  
+  <h3>Composted Organic Matter</h3>
+  <p>Compost has the advantage of acting as a fertility dam. Compost creates an environment for many creatures to live. Nutrients are stored in these creatures bodies and released slowly when the die. So adding composted organic matter increases fertility in the first year and then decreasingly, for many years to come.</p>
+  <p>When we bought our house it was full of unsuitable trees. We chainsawed them all down and chipped what we could and put the chips and logs back into our garden. No fertility was wasted we put it all back to slowly rot and be consumed by the myriad creatures.</p>
+  <p>The tricky part is knowing how much composted organic matter to put into your garden. The rule of thumb is that if your veggies are decreasing in size or health you need to add more. We were putting chicken manure pellets and bags of compost into our garden but after 15 years, crops were looking a bit poorly. We increased our compost commitment, adding it by the cubic meter and after a year we are getting the best crops we ever have. The soil is also looking better and draining better. Adding compost by the bag simply wasn't enough.</p>
+  <p>We have also noticed our trees are looking poorly. We never gave them anything, just expecting them to get by. We will now be adding compost to all. Our macadamia trees will be getting chook pellets, our other fruit trees will be getting artificials and chook pellets as well. Hopefully in a couple of years we will see an increase in fruit and nuts.</p>
 
 
 </div>
