--- a/menu.html
+++ b/menu.html
@@ -2,6 +2,7 @@
 <ol>
 <li><a href="index.html">Home</a></li>
 <li><a href="why-grow-food.html">Why Grow Food</a></li>
+<li><a href="where-to-start.html">Where To Start?</a></li>
 <li><a href="compost.html">Increase Fertility</a></li>
 <li><a href="avocado-root-rot.html">Experiment to stop avocado root rot</a></li>
 <li><a href="contactus.html">Contact Us</a></li>
