--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
 <li><a href="why-grow-food.html">Why Grow Food</a></li>
 <li><a href="where-to-start.html">Where To Start?</a></li>
 <li><a href="compost.html">Increase Fertility</a></li>
+<li><a href="to-dig.html">To Dig Or Not To Dig</a></li>
 <li><a href="avocado-root-rot.html">Experiment to stop avocado root rot</a></li>
 <li><a href="contactus.html">Contact Us</a></li>
 </ol>
