--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang="en-au"><head><meta charset="utf-8"><meta name="robots" content="index,follow,noarchive">
 <title>Port Macquarie Urban Food Garden</title>
-<meta name="description" content="">
+<meta name="description" content="Port Macquarie Urban Food Garden is a not-for-profit research and education organisation. Our research and education is based on sustainable food production for the grower. We have experience growing food on 40 acres and a suburban home block.">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -43,22 +43,22 @@
 <img src="header.jpg" alt="Heading Image">
 
 <div class="padLR">
-  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-09</div>
+  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-10-07</div>
   <h1>Port Macquarie Urban Food Garden</h1>
-  <p>We have been growing food with a sustainability goal since 1994. We initially started in Gympie on 40 acres. We turned 40 acres of Blady grass into a showcase of sustainability. We won the first Gympie Landcare Environment Award. After 5 years we had to move to a coastal urban environment (due to allergies to grass pollen) and continue our sustainability focus in an urban environment.</p>
+  <p>Port Macquarie Urban Food Garden is a not-for-profit research and education organisation. Our research and education is based on sustainable food production for the grower. We have experience growing food on 40 acres and a suburban home block. We have been growing food with a sustainability goal since 1994. We initially started in Gympie on 40 acres. We turned 40 acres of Blady grass into a showcase of sustainability. We won the first Gympie Landcare Environment Award. After 5 years we had to move to a coastal urban environment (due to allergies to grass pollen) and continue our sustainability focus in an urban environment.</p>
 
 <p></p>What is an Urban Food Garden? We were looking for a description of what we do and decided Urban Food Garden best describes it.
 <br><b>- Urban.</b> We have a normal suburban backyard. We have a limited garden size.
 <br><b>- Food.</b> We aim to grow a wide variety of food and in sufficient quantities to fulfill our everyday requirements. This is impossible but the challenge is to get as close as possible. 
 <br><b>- Garden.</b> We grow for ourselves, not for others. So we are not a farm.</p>
 
-<p></p>Our purpose in publishing is to show what we have done and maybe give some pointers. You can take what works for you and ignore what you want to ignore.</p>
+<p>We have many years experience growing food with a sustainable goal both on a country property and a suburban block. We hope that what we have to say may be of some interest and benefit to you. Take what works for you and ignore the rest.</p>
 
-  <div class="alertTheme flex-center-all"> 
+<div class="card flex-center-all pad-4"><img src="youtubelogo.svg" height="50" alt="Youtube Image"> <a href="https://youtube.com/@pmufg" target="_blank" class="txtShadowBlackGlow font-14">Virtual Tour of our suburban block</a></div>
+
+<p><div class="alertTheme flex-center-all"> 
 <p>When the last tree has been cut down, the last fish caught, the last river poisoned, only then will we realize that one cannot eat money.</p>
-</div>
-
-<div class="card flex-center-all pad-4"><img src="youtubelogo.svg" height="50" alt="Youtube Image"> <a href="https://youtube.com/@pmufg" target="_blank" class="txtShadowBlackGlow font-14">Virtual Tour and Information</a></div>
+</div></p>
 
 </div>
 </div>
