--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,11 @@
 <li><a href="to-dig.html">To Dig Or Not To Dig</a></li>
 <li><a href="save-seeds.html">Saving Your Seeds</a></li>
 <li><a href="avocado-root-rot.html">Experiment to stop avocado root rot</a></li>
+<li><b class="font-10">Australian Native Bees</b>
+<ol>
+<li><a href="beeflowers.html">Flowers They Like</a></li>
+<li><a href="beehive.html">Build A Hive</a></li>
+</ol>
 <li><a href="contactus.html">Contact Us</a></li>
 </ol>
 
