--- a/beehive.html
+++ b/beehive.html
@@ -32,8 +32,10 @@
     </div>
 </div>
 
+<img src="bee-header.jpg" alt="Heading Image">
+
 <div class="padLR">
-  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-08-29</div>
+  <div class="box-tag bgcol-T25 color-T80 font-08">Last Updated: 2023-10-17</div>
   <h1>Build An Australian Native Bee Hive</h1>
 
 
