--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
 <li><a href="where-to-start.html">Where To Start?</a></li>
 <li><a href="compost.html">Increase Fertility</a></li>
 <li><a href="to-dig.html">To Dig Or Not To Dig</a></li>
+<li><a href="compression.html">Compression Is Bad</a></li>
 <li><a href="save-seeds.html">Saving Your Seeds</a></li>
 <li><a href="avocado-root-rot.html">Experiment to stop avocado root rot</a></li>
 <li><b class="font-10">Australian Native Bees</b>
