--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 <li><a href="index.html">Home</a></li>
 <li><a href="why-grow-food.html">Why Grow Food</a></li>
 <li><a href="where-to-start.html">Where To Start?</a></li>
+<li><a href="layout.html">Food Garden Layout</a></li>
 <li><a href="compost.html">Increase Fertility</a></li>
 <li><a href="to-dig.html">To Dig Or Not To Dig</a></li>
 <li><a href="compression.html">Compression Is Bad</a></li>
