--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en-au"><head><meta charset="utf-8"><meta name="robots" content="index,follow,noarchive">
+<!doctype html><html lang="en-au"><head><meta charset="utf-8"><meta name="robots" content="index,follow">
 <title>Port Macquarie Urban Food Garden</title>
 <meta name="description" content="Port Macquarie Urban Food Garden is a not-for-profit research and education organisation. Our research and education is based on sustainable food production for the grower. We have experience growing food on 40 acres and a suburban home block.">
 
